incorporated johns feedback

--- a/paper/cscw/cscw2015.tex
+++ b/paper/cscw/cscw2015.tex
@@ -9,8 +9,7 @@ copies are not made or distributed for profit or commercial advantage and
 that copies bear this notice and the full citation on the first page. To
 copy otherwise, or republish, to post on servers or to redistribute to 
 lists, requires prior specific permission and/or a fee.\\
-{\confname{CHI'12}}, May 5--10, 2012, Austin, Texas, USA.\\
-Copyright 2012 ACM 978-1-4503-1015-4/12/05...\$10.00.
+{\confname{CSCW'15}},	  March 14-18, 2015 in Vancouver, Canada\\
 }
 
 % Arabic page numbers for submission. 
@@ -179,6 +178,8 @@ John Chuang\\
 
 \section{Acknowledgments}
 One of the authors (T.M.) acknowledges support from the Swiss National Science Foundation (Grant Nr.  PA00P2-145368).
+
+This research was supported in part by the National Science Foundation through award CCF-0424422 (TRUST - Team for Research in Ubiquitous Secure Technology).
 
 % Balancing columns in a ref list is a bit of a pain because you
 % either use a hack like flushend or balance, or manually insert
