--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -1,2 +1,2 @@
 \section{Conclusion}
-We have presented an recursive algorithm based on a {\it bi-partite network random walker} model, which jointly ranks Wikipedia editors by their expertise, and articles by their quality, from a simple input matrix recording whose editor as modified a given article. Moreover, upon calibration on 12 categories of Wikipedia articles, the input and the control parameters of the model inform directly on how value is created from the complex network of contributions. It appears that some categories of Wikipedia articles fully benefit of the multiplicity of contributors (i.e. ``collaborativeness"), while for other categories, more contributors per article generate dis-value. The origins of these differences between categories could stem from limited coordination capacity between contributors. The organization of value creation in open collaboration might also be intrinsically different from one topic to another. Finally, we want to stress the generality of the method we have presented. Similarly to open collaboration in Wikipedia, the proposed algorithm can apply to a variety of  situations, such as social coding (e.g., Github) , or collaborative rating (e.g., Amazon or Yelp reviews), in order to help further understand to origins of collective value creation and quality, which are the hallmark of open collaboration.
+We have presented a recursive algorithm based on a {\it bi-partite network random walker} model, which jointly ranks Wikipedia editors by their expertise, and articles by their quality, from a simple input matrix recording which editor has modified a given article. Moreover, upon calibration on 12 categories of Wikipedia articles, the input and the control parameters of the model inform directly on how value is created from the complex network of contributions. It appears that some categories of Wikipedia articles fully benefit from the multiplicity of contributors (i.e. ``collaborativeness"), while for other categories, more contributors per article generate dis-value. The origins of these differences between categories could stem from limited coordination capacity between contributors. The organization of value creation in open collaboration might also be intrinsically different from one topic to another. Finally, we want to stress the generality of the method we have presented. Similarly to open collaboration in Wikipedia, the proposed algorithm can be applied to a variety of situations, such as social coding (e.g. Github) , or collaborative rating (e.g. Amazon or Yelp reviews). By applying the algorithm in many domains we further understand to origins of collective value creation and quality, which are the hallmark of open collaboration.
