--- a/paper/sections/method.tex
+++ b/paper/sections/method.tex
@@ -1,13 +1,13 @@
 \section{Method}
 \label{method}
-Measuring the structure of value creation by individuals is nearly impossible in most in open collaboration projects, in particular when they do not involve writing software code, which can be compiled, executed and tested on computers. Like in Wikipedia, the most common way to code knowledge is natural language (e.g., English, Chinese, Spanish, French, German), which can hardly be systematically tested for performance. Natural language is indeed the realm of subjective interpretation by humans. Here, we present a method to model value creation and performance in such environments, which neither relies on the content nor on subjective metrics, such as the number of edits, or the number of bytes changed overall or per edit. We recognize that value can be brought by each editor, regardless of the frequency, or the length of her contributions. Only the number and the expertise of editors bring value to an article.  And the expertise of editors can be measured from the number and the quality of articles they have modified at least once.
+Measuring the structure of value creation by individuals is nearly impossible in most in open collaboration projects, in particular when they do not involve writing software code, which can be compiled, executed and tested on computers. As exemplified in Wikipedia, the most common way to code knowledge is natural language (e.g. English, Chinese, Spanish, French, German), which can hardly be systematically tested for performance. Natural language is indeed the realm of subjective interpretation by humans. Here, we present a method to model value creation and performance in such environments, without relying on the content or on subjective metrics, such as the number of edits, or the number of bytes changed overall or per edit. We recognize that value can be brought by each editor, regardless of the frequency, or the length of her contributions. Only the number and the expertise of editors bring value to an article.  And the expertise of editors can be measured from the number and the quality of articles they have modified at least once.
 
-For that, we consider a simple input, which is a representation of the bi-partite network of editors and their contributions to articles.  Namely, let us consider a matrix $M_{ea} \equiv M$ of all editors having contributed to a category of articles on Wikipedia. $M_{ea}$ takes value $1$ if editor $e$ has edited article $a$, and $0$ otherwise. Note that $M$ only shows which editors have ever touched an article. For the category {\it Feminist Writers}, as presented on Figure \ref{fig:triangle}, $M$ exhibits a triangular structure in which editors (resp. articles) are sorted (max on the bottom-left corner) by the number of articles they have touched (resp. by the number of editors who have touched each article). $M$ is the only input of the {\it bi-partite random walker} model described thereafter, for recursively characterizing the structure and the value of contributions in open collaboration, through the evaluation of editors expertise and articles quality.
+For that, we consider a simple input, which is a representation of the bi-partite network of editors and their contributions to articles.  Namely, let us consider a matrix $M_{ea} \equiv M$ of all editors having contributed to a category of articles on Wikipedia. $M_{ea}$ takes value $1$ if editor $e$ has edited article $a$, and $0$ otherwise. Note that $M$ only shows which editors have ever touched an article. For the category {\it Feminist Writers}, as presented on Figure \ref{fig:triangle}, $M$ exhibits a triangular structure in which editors (resp. articles) are sorted (max on the bottom-left corner) by the number of articles they have touched (resp. by the number of editors who have touched each article). $M$ is the only input of the {\it bi-partite random walker} model described thereafter, for recursively characterizing the structure and the value of contributions in open collaboration, through the evaluation of editor expertise and articles quality.
 
 \begin{figure*}[!t]
 \centering
 \includegraphics[width=2.0\columnwidth]{../Figures/Category_Feminist_writerstriangle_matrix_corrected.png}
-\caption{Typical $\mathbf{M}$ matrix for a Wikipedia category (here, {\it Feminist Writers}) ordered on both dimensions by descending order of number of articles modified by an editor (horizontal axis) and of number editors who have modified an article (vertical axis). The structure of $\mathbf{M}$ is triangular and shows that some editors have a pervasive activity over articles, while most editors edit only a few. Similarly, some articles receive widespread attention by editors, while most articles are modified only by a few editors.}
+\caption{Typical $\mathbf{\mathit{M}}$ matrix for a Wikipedia category (here, {\it Feminist Writers}) ordered on both dimensions by descending order of number of articles modified by an editor (horizontal axis) and of number editors who have modified an article (vertical axis). The structure of $\mathbf{\mathit{M}}$ is triangular and shows that some editors have a pervasive activity over articles, while most editors edit only a few. Similarly, some articles receive widespread attention by editors, while most articles are modified only by a few editors.}
 \label{fig:triangle}
 \end{figure*}
 
@@ -83,14 +83,14 @@ After each iteration, we have expertise and quality scores, which allow ranking 
 \begin{figure}[!t]
 \centering
 \includegraphics[width=0.9\columnwidth]{../Figures/fem_editors_iter_converge.png}.
-\caption{Convergence of the ranked expertise $w_e$ of editors having contributed to articles in the Feminist Writers category on Wikipedia for arbitrary control parameters: $\mathbf{(\alpha,\beta) =(-0.5, 0.5)}$. Starting from the sum of contributed articles as the initial step, we can see how the algorithm progressively ranks editors: some editors with initial lowest rank, i.e. with few articles edited, get a higher rank as the number of iterations increases. Similarly, some initially high ranked editors, gradually drop in the ranking. In the case Wikipedia categories, the algorithm converges with clearly stable ranks, after nearly $\mathbf{50}$ iterations.}
+\caption{Convergence of the ranked expertise $w_e$ of editors having contributed to articles in the Feminist Writers category on Wikipedia for arbitrary control parameters: $\mathbf{(\alpha,\beta) =(0, 0.72)}$. Starting from the sum of contributed articles as the initial step, we can see how the algorithm progressively ranks editors: some editors with initial lowest rank, i.e. with few articles edited, get a higher rank as the number of iterations increases. Similarly, some initially high ranked editors, gradually drop in the ranking. In the case Wikipedia categories, the algorithm converges with clearly stable ranks, after $\mathbf{64}$ iterations.}
 \label{fig:convergence}
 \end{figure}
 
 
-The parameters $\alpha$ and $\beta$ control how editors and articles influence each others at the level of the whole bi-partite collaboration network. Upon calibration with ground-truth editor expertise and article quality metrics, these control parameters thus directly inform on the structure of peer-production, and how contributions benefit to the whole open collaboration project. 
+The parameters $\alpha$ and $\beta$ control how editors and articles influence each other at the level of the whole bi-partite collaboration network. Upon calibration with ground-truth editor expertise and article quality metrics, these control parameters thus directly inform on the structure of peer-production, and how contributions benefit the whole open collaboration project. 
 
-%Whenever calibration shows that the evolution of $\alpha$ and $\beta$ can be predicted, then editors expertise and articles quality can also be predicted up to statistical errors. 
+%Whenever calibration shows that the evolution of $\alpha$ and $\beta$ can be predicted, then editor expertise and articles quality can also be predicted up to statistical errors. 
 %Here, we explain the calibration steps for$\alpha$ and $\beta$ and how the control parameters inform on the structure of value creation in open collaboration. We also document the evolution of these parameters as Wikipedia categories get increasingly enriched with new contributions.
 
 %A property of this algorithm, is that with the following balance condition,
