--- a/paper/sections/intro.tex
+++ b/paper/sections/intro.tex
@@ -5,6 +5,6 @@ Nonetheless, in the absence of formal rules that organize open collaboration, it
 
 To add to the complexity of self-organized open collaboration projects, many communities exhibit critical cascades of iterative improvements, which in turn lead to super-linear productive bursts of contributions \cite{sornette2014howmuch}. These highly non-linear, transient and intrinsically unpredictable bursts of iterative improvements are the hallmark of successfully organized communities. To enable productive bursts, a number of conditions must be met, which include transparency, self-censored clans, emergent technology, problem front-loading, distributed screening, and modularity \cite{vonkrogh2014designing}. Unfortunately, the dynamics of contributions are deeply entangled, and the ways individual inputs affect the value of collectively produced knowledge remain largely obscure. 
 
-In this paper, we recognize that the value of each knowledge unit (e.g., article, source code file) is deeply tied to the expertise and the number of its contributors. Conversely, the expertise of contributors is a function of knowledge units contributed to. We therefore examine open collaboration projects, and their evolution, as a simple network that relates knowledge units and contributors. We propose a {\it bi-partite network random walker} model, which measures how editors expertise influences the quality of articles, how contributions to articles influence editors expertise, and so on, recursively. We calibrate the model on 12 Wikipedia categories of articles, and we show how the structure of contribution to knowledge can be disentangled, and how this structure, genuine to categories, influences the quality of knowledge produced and the expertise of editors.
+In this paper, we recognize that the value of each knowledge unit (e.g. article, source code file) is deeply tied to the expertise and the number of its contributors. Conversely, the expertise of contributors is a function of knowledge units contributed to. We therefore examine open collaboration projects, and their evolution, as a simple network that relates knowledge units and contributors. We propose a {\it bi-partite network random walker} model, which measures how editor expertise influences the quality of articles, how contributions to articles influence editor expertise, and so on, recursively. We calibrate the model on 12 Wikipedia categories of articles, and we show how the structure of contribution to knowledge can be disentangled, and how this structure, genuine to categories, influences the quality of knowledge produced and the expertise of editors.
 
 The paper is organized as follows. The reader is first introduced to relevant literature. The method, data employed and the results are then presented and discussed. We finally present future research directions and conclude.
