extra comma in recursive formula

--- a/paper/sections/method.tex
+++ b/paper/sections/method.tex
@@ -17,7 +17,7 @@ Given $M$, the simplest way to assess the contribution value, the {\it expertise
 \begin{equation}
 \begin{cases}
  u_{e}^{(0)} = \sum_{a=1}^{N_{a}} M \equiv k_e\\[7pt]
- u_{a}^{(0)} = \sum_{e=1}^{N_{e}} M \equiv k_a,
+ u_{a}^{(0)} = \sum_{e=1}^{N_{e}} M \equiv k_a
 \end{cases}
 \label{HHinit}
 \end{equation}
