more commas in recursive formula

--- a/paper/sections/method.tex
+++ b/paper/sections/method.tex
@@ -43,7 +43,7 @@ Although interpretation is difficult past the very first iteration steps, at eac
 \begin{equation}
 \begin{cases}
  u_{e}^{(n+1)} = \frac{1}{k_{e}}\sum_{a=1}^{N_{a}} M \, u_{a}^{n}\\[7pt]
- u_{a}^{(n+1)} = \frac{1}{k_{a}}\sum_{e=1}^{N_{e}} M \, u_{e}^{n}.\\
+ u_{a}^{(n+1)} = \frac{1}{k_{a}}\sum_{e=1}^{N_{e}} M \, u_{e}^{n}\\
 \end{cases}
 \label{HHhigher}
 \end{equation}
@@ -62,7 +62,7 @@ According to  Caldarelli et al. \cite{caldarelli2012network}, we reformulate the
 \begin{equation}
 \begin{cases}
 w^{(n+1)}_e (\alpha,\beta) = \sum_{a=1}^{N_a}  G_{ea}(\beta) \,w^{(n)}_a (\alpha,\beta)\\[7pt]
-w^{(n+1)}_a (\alpha,\beta) = \sum_{e=1}^{N_e}  G_{ae}(\alpha) \, w^{(n)}_e (\alpha,\beta),\\
+w^{(n+1)}_a (\alpha,\beta) = \sum_{e=1}^{N_e}  G_{ae}(\alpha) \, w^{(n)}_e (\alpha,\beta)\\
 \end{cases}
 \label{random_walker}
 \end{equation}
