--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -55,15 +55,15 @@ $\beta$ is found to be generally stable over snapshots for categories, past the 
 
 \begin{figure}[!t]
 \centering
-<<<<<<< HEAD
+%<<<<<<< HEAD
 \includegraphics[width=0.9\columnwidth]{../Figures/rho_combined.png}.
 \caption{Evolution of Spearman $\rho$ rank correlations between the ranking obtained from the calibrated model and the actual values for each category and for editors (upper panel)  and articles (lower panel). The correlations are generally quite high : $ 0.46 < \rho_e < 0.75$ with $\langle \rho_e\rangle = 0.64$ for editors and $0.57 < \rho_a < 0.91$ with $\langle \rho_a\rangle = 0.72$. $\rho_{a}$  is stable over time, which means that the quality of articles can be well captured early on by the model. However, $\rho_e$ exhibits a convex increase over time, suggesting that it takes time (i.e. lots of edits) to capture well the expertise of editors.}
 \label{fig:rhotime}
-=======
-\includegraphics[width=0.9\columnwidth]{Figures/contour_fem_combined.png}.
-\caption{Typical landscape of maximum correlation as a function of $\alpha$ and $\beta$ for editors (upper panel) and articles (lower panel). The contour line shows the 90th percentile of the rank correlation over the landscape. It typically displays a linear function between $\alpha$ and $\beta$. For articles, the relationship is typically of the type $\alpha = - b \beta + 1$ for $\beta >0$ or $\alpha = b \beta + 1$ for $\beta < 0$ with $b>0$ varying for each category. For editors, the relationship is $\alpha = 0$ for $\beta < ??$. {\it please add the corresponding figure for editors.  that would be great if you could make the labels ($\alpha$ and $\beta$) WAY bigger. You can also get remove the title. The cherry on the cake would be to have the color bar equal or smaller than the vertical dimension of the landscape, with keeping the landscape as a square rather than a rectangle.}}
-\label{fig:landscape}
->>>>>>> 42d0243c97d914cb8b629e45dd5a716a2aafdd56
+%=======
+%\includegraphics[width=0.9\columnwidth]{Figures/contour_fem_combined.png}.
+%\caption{Typical landscape of maximum correlation as a function of $\alpha$ and $\beta$ for editors (upper panel) and articles (lower panel). The contour line shows the 90th percentile of the rank correlation over the landscape. It typically displays a linear function between $\alpha$ and $\beta$. For articles, the relationship is typically of the type $\alpha = - b \beta + 1$ for $\beta >0$ or $\alpha = b \beta + 1$ for $\beta < 0$ with $b>0$ varying for each category. For editors, the relationship is $\alpha = 0$ for $\beta < ??$. {\it please add the corresponding figure for editors.  that would be great if you could make the labels ($\alpha$ and $\beta$) WAY bigger. You can also get remove the title. The cherry on the cake would be to have the color bar equal or smaller than the vertical dimension of the landscape, with keeping the landscape as a square rather than a rectangle.}}
+%\label{fig:landscape}
+%>>>>>>> 42d0243c97d914cb8b629e45dd5a716a2aafdd56
 \end{figure}
 
 	
